# ComputerVision

./: AndroidManifest.xml  README.md
assets/: 0.param  2.param
cpp/: CMakeLists.txt
cpp/ABIs/arm64-v8a/ncnn/: platform.h
cpp/ABIs/armeabi-v7a/ncnn/: platform.h
cpp/ABIs/riscv64/ncnn/: platform.h
cpp/ABIs/x86/ncnn/: platform.h
cpp/include/internal/: main.h
cpp/src/internal/: main.cpp
kotlin/com/computer/vision/: Accessibility.kt  Act.kt  App.kt
res/values/: strings.xml  themes.xml
res/values-night/: themes.xml
res/xml/: accessibility.xml
tools/: config.yaml  keypointDetection.ipynb  letterbox.py  visualize.py
